refactor: share bingo runtime and cross-server presentation
Extract Bingo objective evaluation, world rules, player state, presentation, and native scoreboard teams into shared modules used by Core and the worker. Add Redis-backed cross-server team chat and align worker lifecycle behavior with Core. Refresh Bingo task resources and lock music disc and smithing template difficulty coverage with tests.